Unit Details : Allow aspect ratios to be specified for images, to stop flickers
When changing modifications on a unit ( or a unit itself ), the scroll jumps
and images flicker. This is because they do not have explicit heights.
So, when an image is swapped out for another, the image container collapses
until the image is fetched and loaded and then comes back up again.

--- a/css/pages/section/pricing-section-unit-details.css
+++ b/css/pages/section/pricing-section-unit-details.css
@@ -161,6 +161,15 @@
 	cursor: -webkit-zoom-in;
 	cursor: zoom-in;
 }
+.pricing-section .unit-details .detail-section .image.aspect-ratioed {
+	height: 0;
+}
+.pricing-section .unit-details .detail-section .image.aspect-ratioed img {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 100%;
+}
 
 @media ( max-width: 640px ) {
 	/* For small screens, preserve the whitespace ( and text-wrapping ), as expressed in the spreadsheet, so that the text does not overflow */
